fixed pagination of course subjects on firefox issues

--- a/app/assets/stylesheets/courses.displace.css.scss
+++ b/app/assets/stylesheets/courses.displace.css.scss
@@ -149,3 +149,9 @@ font-size:14pt;
 {
 
 }
+
+/* pagination on subjects page */
+.pag
+{
+width: 110%;
+}
